# Sonari

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonari_overview.html  styles.css  tsconfig.base.json  tsconfig.json  tsconfig.scripts.json  vitest.config.ts
.claude/: settings.json
.claude/agents/: commit-worker.md  issue-planner.md  issue-step-worker.md  plan-reviewer.md  verification-reviewer.md
.claude/hooks/: format-changed.sh  pre-pr-quality-gate.sh  precommit-quality-gate.sh
.codex/: config.toml  hooks.json
.codex/agents/: commit-worker.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-feature.yml  02-fix.yml  config.yml
.github/workflows/: affected-cells-proof-worker-deploy.yml  ci.yml  (+5 more)
contracts/: Move.toml  Published.toml  README.md  devflow.md  smoke.md  spec.md
dapp/: .dev.vars.example  .env.example  .gitignore  README.md  next.config.ts  open-next.config.ts  package.json  tsconfig.json  wrangler.jsonc
data/residence_cells/: Cargo.toml  README.md  allowed_residence_cells_manifest.v1.res7.json  pyproject.toml
data/residence_cells/src/: lib.rs  main.rs
data/residence_cells/src/residence_cells_allowlist/: __init__.py  cli.py  core.py
data/residence_cells/tests/: cli.rs  generation.rs  golden_vectors.rs  proof_shards.rs  readme.rs  test_cli.py  test_core.py  tile_shards.rs
data/residence_cells/tests/fixtures/: compact_land.geojson
docs/: README.md  architecture.md  business_logic.md  contract_republish_runbook.md  contracts_overview.md  contracts_spec.md  defi_payments_problem_statement.md  disaster_funding_model.md  disaster_oracle.md  donation_flow.md  fund_flow_spec.md  identity_verification.md  index.html  move_public_api_audit.md  sonari_overview.html  tech_stack.md  technical_architecture.md  webapp.md
infra/: README.md
nautilus/verifiers/census/tee/: Cargo.toml  README.md
nautilus/verifiers/census/tee/src/: affected_cells.rs  counts.rs  error.rs  graphql.rs  lib.rs  main.rs  server.rs
nautilus/verifiers/census/tee/src/encoding/: census_bcs.rs  mod.rs
nautilus/verifiers/census/tee/tests/: authenticated_fixture.rs  cli.rs  live_testnet.rs  server.rs
nautilus/verifiers/earthquake/tee/: Cargo.toml  README.md
nautilus/verifiers/earthquake/tee/src/: lib.rs  main.rs  server.rs
nautilus/verifiers/earthquake/tee/src/compute/: geo.rs  intensity.rs  merkle.rs
nautilus/verifiers/earthquake/tee/src/core/: artifacts.rs  mod.rs  processing.rs  residence_tiles.rs  source_archive.rs  types.rs
nautilus/verifiers/earthquake/tee/src/crypto/: mod.rs
nautilus/verifiers/earthquake/tee/src/encoding/: bcs_payload.rs
nautilus/verifiers/earthquake/tee/src/source/: usgs.rs
nautilus/verifiers/earthquake/tee/src/testdata/: finalized_server_path.golden.json
nautilus/verifiers/earthquake/tee/tests/: oracle_core.rs  sha256_contract.rs
nautilus/verifiers/membership/tee/: Cargo.toml  README.md
nautilus/verifiers/membership/tee/src/: error.rs  lib.rs  main.rs  server.rs
nautilus/verifiers/membership/tee/src/core/: duplicate_key.rs  mod.rs  processing.rs  types.rs
nautilus/verifiers/membership/tee/src/encoding/: identity_bcs.rs  mod.rs
nautilus/verifiers/membership/tee/src/testdata/: get_attestation.golden.json  get_attestation_with_observation.golden.json  verified_server_path.golden.json
nautilus/verifiers/membership/tee/src/verify/: kyc.rs  mod.rs  proof_mode.rs  world_id.rs
nautilus/verifiers/membership/tee/tests/: bcs_golden.rs  cli.rs  fixtures.rs
nautilus/verifiers/membership/verifiers/residence/allowlist/: Cargo.toml
nautilus/verifiers/membership/verifiers/residence/allowlist/src/: lib.rs  main.rs
nautilus/verifiers/membership/verifiers/residence/allowlist/tests/: cli.rs  golden_vectors.rs  land_candidates.rs
nautilus/verifiers/shared-tee/: Cargo.toml  README.md
nautilus/verifiers/shared-tee/src/: artifacts.rs  lib.rs  registry.rs  seed.rs
nautilus/verifiers/shared-tee/src/crypto/: hash.rs  hex.rs  mod.rs  signer.rs
nautilus/verifiers/shared-tee/src/enclave/: attestation.rs  http.rs  mod.rs  registration.rs  server.rs  vsock.rs
schemas/: affected_cell_leaf.md  affected_cells.schema.json  census_result.bcs.md  census_tee_input.schema.json  disaster_oracle_response.bcs.md  earthquake_oracle_response.bcs.md  identity_verification_result.bcs.md  raw_data_manifest.schema.json  residence_cell_allowlist.md  source_manifest.schema.json
scripts/: affected_cells_proof_worker_deploy_workflow.test.ts  aws_census_eif_build.test.ts  aws_census_tee_artifact_build.test.ts  aws_disaster_runner_template.test.ts  aws_earthquake_eif_build.test.ts  aws_earthquake_runner_deploy_plan.test.ts  aws_earthquake_runner_deploy_plan.ts  aws_earthquake_runner_dev_deploy_workflow.test.ts  aws_earthquake_runner_template.test.ts  aws_earthquake_tee_artifact_build.test.ts  aws_membership_identity_eif_build.test.ts  aws_membership_identity_runner_template.test.ts  aws_membership_identity_tee_artifact_build.test.ts  aws_sonari_verifier_runner_deploy_plan.test.ts  aws_sonari_verifier_runner_deploy_plan.ts  aws_sonari_verifier_runner_dev_deploy_workflow.test.ts  aws_sonari_verifier_runner_readme.test.ts  aws_sonari_verifier_runner_template.test.ts  build_aws_census_eif.ts  build_aws_census_tee_artifact.ts  build_aws_earthquake_eif.ts  build_aws_earthquake_lambda.test.ts  build_aws_earthquake_lambda.ts  build_aws_earthquake_tee_artifact.ts  build_aws_membership_identity_eif.ts  build_aws_membership_identity_tee_artifact.ts  build_aws_sonari_verifier_runner_lambda.test.ts  build_aws_sonari_verifier_runner_lambda.ts  build_demo_affected_cells.test.ts  build_demo_affected_cells.ts  check_move_analyzer_diagnostics.test.ts  check_move_analyzer_diagnostics.ts  check_move_struct_field_limit.test.ts  check_move_struct_field_limit.ts  ci_workflow_cache.test.ts  dapp_deploy_workflow.test.ts  dapp_register_identity_request.test.ts  display_assets.test.ts  identity_payload_vectors.test.ts  membership_identity_aws_interface_doc.test.ts  (+35 more)
site/: package.json
(+1614 files in other folders)
