[package]
name = "residence-allowlist"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
name = "residence_allowlist"
path = "src/lib.rs"

[dependencies]
bcs = "0.1"
clap = { version = "4.5", features = ["derive"] }
geo = "0.30"
geojson = { version = "0.24", default-features = false, features = ["geo-types"] }
h3o = { version = "0.8", features = ["geo"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
