[project]
name = "sonari-residence-cells"
version = "0.1.0"
description = "Local tooling for Sonari residence cell allowlist artifacts"
requires-python = ">=3.11"
dependencies = [
    "h3==4.5.0",
]

[project.scripts]
residence-allowlist = "residence_cells_allowlist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/residence_cells_allowlist"]
