[package]
name = "sonari-tee-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "sonari_tee_core"
path = "src/lib.rs"

[dependencies]
ed25519-dalek = "2.2.0"
hex = "0.4"
libc = "0.2"
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package = "aws-nitro-enclaves-nsm-api" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
