[package]
name = "tee"
version = "0.1.0"
edition = "2024"

[dependencies]
bcs = "0.1"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.2.0"
h3o = "0.8"
hex = "0.4"
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
