[package]
name = "tee"
version = "0.1.0"
edition = "2024"
default-run = "tee"

[dependencies]
bcs = "0.1"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.2.0"
h3o = "0.8"
hex = "0.4"
libc = "0.2"
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package = "aws-nitro-enclaves-nsm-api" }
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
sonari-tee-core = { path = "../../shared-tee" }
thiserror = "2"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
