[package]
name = "membership-tee"
version = "0.1.0"
edition = "2024"

[lib]
name = "membership_tee"
path = "src/lib.rs"

[dependencies]
bcs = "0.1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sonari-tee-core = { path = "../../shared-tee" }
thiserror = "2"

[dev-dependencies]
ed25519-dalek = "2.2.0"
