[package]
name = "residence-allowlist"
version = "0.1.0"
edition = "2024"

[lib]
name = "residence_allowlist"
path = "src/lib.rs"

[dependencies]
bcs = "0.1"
geo = { version = "0.30", default-features = false }
geojson = { version = "0.24", default-features = false, features = ["geo-types"] }
h3o = { version = "0.8", features = ["geo"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
